@@ -3,7 +3,6 @@ package Baito.user.filter;
 import Baito.user.Serive.UserService;
 import Baito.user.user.User;
 import Baito.user.utils.JsonWebToken;
-import jakarta.servlet.Filter;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpFilter;
@@ -12,82 +11,92 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
-
 
 @Component
 public class UserFilter extends HttpFilter {
 
-    private final List<String> unsecuredEndpoints = Arrays.asList(
+    private final List<String> unsecuredEndpoints = List.of(
             "/api/v1/authentication/login",
             "/api/v1/authentication/signin"
-           );
+    );
 
     private final JsonWebToken jsonWebToken;
-    private final UserService authService;
+    private final UserService userService;
 
-    public UserFilter(JsonWebToken jsonWebToken, UserService authService) {
+    public UserFilter(JsonWebToken jsonWebToken, UserService userService) {
         this.jsonWebToken = jsonWebToken;
-        this.authService = authService;
+        this.userService = userService;
     }
 
-
     @Override
-    protected void doFilter(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
-            throws ServletException, IOException {
+    protected void doFilter(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain chain
+    ) throws ServletException, IOException {
 
-        // ✅ Allow multiple frontend URLs dynamically
-        String origin = request.getHeader("Origin");
-        if (origin != null && (
-                origin.equals("https://speakly-weld.vercel.app") ||       // ✅ new frontend
-                        origin.equals("https://speakly-chandans-projects-6abbd979.vercel.app") || // old frontend
-                        origin.equals("http://localhost:5173")                    // ✅ local development
-        )) {
-            response.addHeader("Access-Control-Allow-Origin", origin);
-        }
+        /* ===============================
+           ✅ CORS – PRODUCTION SAFE
+           =============================== */
 
-        // ✅ Common headers
-        response.addHeader("Access-Control-Allow-Methods", "GET,POST,PUT,DELETE,OPTIONS");
-        response.addHeader("Access-Control-Allow-Headers", "Content-Type,Authorization");
-        response.addHeader("Access-Control-Allow-Credentials", "true");
+        response.setHeader("Access-Control-Allow-Origin", "*");
+        response.setHeader(
+                "Access-Control-Allow-Methods",
+                "GET,POST,PUT,DELETE,OPTIONS"
+        );
+        response.setHeader(
+                "Access-Control-Allow-Headers",
+                "Content-Type,Authorization"
+        );
 
-        // ✅ Handle preflight request (OPTIONS)
+        // Handle preflight request
         if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
             response.setStatus(HttpServletResponse.SC_OK);
             return;
         }
 
-        // ✅ Skip auth for unsecured endpoints
+        /* ===============================
+           ✅ Skip unsecured endpoints
+           =============================== */
+
         String path = request.getRequestURI();
         if (unsecuredEndpoints.contains(path)
                 || path.startsWith("/api/v1/authentication/oauth")
                 || path.startsWith("/api/v1/storage")) {
+
             chain.doFilter(request, response);
             return;
         }
 
+        /* ===============================
+           ✅ JWT Authentication
+           =============================== */
+
         try {
             String authorization = request.getHeader("Authorization");
+
             if (authorization == null || !authorization.startsWith("Bearer ")) {
                 throw new ServletException("Token missing");
             }
 
             String token = authorization.substring(7);
+
             if (jsonWebToken.isTokenExpired(token)) {
-                throw new ServletException("Token Expired");
+                throw new ServletException("Token expired");
             }
 
             String email = jsonWebToken.getEmailFromToken(token);
-            User user = authService.getUser(email);
-            request.setAttribute("authenticatedUser", user);
+            User user = userService.getUser(email);
 
+            request.setAttribute("authenticatedUser", user);
             chain.doFilter(request, response);
 
         } catch (Exception e) {
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
             response.setContentType("application/json");
-            response.getWriter().write("{\"message\": \"Invalid authentication token, or token missing.\"}");
+            response.getWriter()
+                    .write("{\"message\":\"Unauthorized or invalid token\"}");
         }
     }
 }
